fix: swag docs routes
