# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/api/v1/messages/process": {
+        "/messages/process": {
             "put": {
                 "description": "Trigger the processing of messages",
                 "tags": [
@@ -24,7 +24,7 @@
                 }
             }
         },
-        "/api/v1/messages/send": {
+        "/messages/send": {
             "post": {
                 "description": "Send a message to the service",
                 "consumes": [
